--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 
+<html>
+  <head>
+    <title>AC2N Homeschooling Web Application</title>
+  </head>
+  <body>
+    <h1>Welcome to AC2N's Homeschooling Web Application</h1>
+    <p>Here you can find detailed descriptions of our courses and syllabi, as well as a payment form to make payments in cryptocurrency on the SUI blockchain. Please contact us if you have any questions or concerns.</p>
+  </body>
+</html>
