--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-
 <html>
-  <head>
-    <title>AC2N Homeschooling Web Application</title>
-  </head>
-  <body>
-    <h1>Welcome to AC2N's Homeschooling Web Application</h1>
-    <p>Here you can find detailed descriptions of our courses and syllabi, as well as a payment form to make payments in cryptocurrency on the SUI blockchain. Please contact us if you have any questions or concerns.</p>
-  </body>
+    <head>
+        <title>AC2N Project</title>
+    </head>
+    <body>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="course-details.html">Course Details</a></li>
+                    <li><a href="payment.html">Payment</a></li>
+                </ul>
+            </nav>
+            <h1>Welcome!</h1>
+            <h2>This is the AC2N project for homeschooling</h2>
+            <p>We are excited to offer a selection of courses for homeschoolers.</p>
+            <ul>
+                <li>Math</li>
+                <li>Science</li>
+                <li>English</li>
+                <li>History</li>
+            </ul>
+        </div>
+    </body>
 </html>
