--- a/Guide_Eos_AIO.html
+++ b/Guide_Eos_AIO.html
@@ -1649,16 +1649,20 @@
             currentCategory = null;
             currentSubcategory = null;
             currentCommand = null;
-            document.getElementById('page-title').textContent = '📘 Guide Eos';
+            // document.getElementById('page-title').textContent = '📘 Guide Eos'; // Titre dans le header
             const container = document.getElementById('category-grid');
-            container.innerHTML = '';
-            state.categories.forEach(cat => {
-                const div = document.createElement('div');
-                div.className = 'category-card';
-                div.innerHTML = `<h3>${cat.icon} ${cat.name}</h3>`;
-                div.onclick = () => showSubcategories(cat.id);
-                container.appendChild(div);
-            });
+            container.innerHTML = ''; // Nettoyer le conteneur
+            if (state.categories && state.categories.length > 0) {
+                state.categories.forEach(cat => {
+                    const div = document.createElement('div');
+                    div.className = 'category-card';
+                    div.innerHTML = `<h3>${cat.icon} ${cat.name}</h3>`;
+                    div.onclick = () => showSubcategories(cat.id);
+                    container.appendChild(div);
+                });
+            } else {
+                container.innerHTML = '<p>Aucune catégorie disponible.</p>';
+            }
             setActiveView('home-view');
         }
 
